--- a/Web/SimpleCalculator/package.json
+++ b/Web/SimpleCalculator/package.json
@@ -20,6 +20,7 @@
     "@angular/platform-browser-dynamic": "^11.2.13",
     "@angular/router": "^11.2.13",
     "bootstrap": "^4.6.0",
+    "http-server": "^0.12.3",
     "jquery": "^3.6.0",
     "rxjs": "^6.6.7",
     "tslib": "^2.2.0",
@@ -43,6 +44,6 @@
     "protractor": "~7.0.0",
     "ts-node": "~8.3.0",
     "tslint": "~6.1.0",
-    "typescript": "^4.2.4"
+    "typescript": "4.0.2"
   }
 }
